Mon Mar 28 14:36:36 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Minor refactoring for I WITH DOT ABOVE.

Mon Mar 28 14:26:24 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Removed code now covered by data from table.

Mon Mar 28 11:49:21 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Adding comments. [ci skip]

Mon Mar 28 11:30:23 2016  Shinichi Maeshima  <netwillnet@gmail.com>

	* lib/rubygems.rb: Fix `Gem.find_spec_for_exe` picks oldest gem.
	  https://github.com/travis-ci/travis-ci/issues/5798
	  https://github.com/rubygems/rubygems/pull/1566
	* test/rubygems/test_gem.rb: ditto.

Mon Mar 28 11:26:31 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems.rb, lib/rubygems/*, test/rubygems/*: Update rubygems-2.6.2.
	  Please see entries of 2.6.2 on
	  https://github.com/rubygems/rubygems/blob/master/History.txt

Mon Mar 28 11:02:31 2016  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* lib/rubygems/test_case.rb: Fix test on Windows for inconsistent temp path.
	  https://github.com/rubygems/rubygems/pull/1554
	  [Bug #12193][ruby-core:74431]

Mon Mar 28 08:19:49 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): refactor floating point format of
	  Rational by using gereric Integer functions.

	* sprintf.c (rb_str_format): fix buffer overflow, length must be
	  greater than precision.  reported by William Bowling <will AT
	  wbowling.info>.

Sun Mar 27 12:13:37 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): convert Rational to floating point
	  format by using gereric Integer functions, not by methods which
	  can be overwritten.

Sat Mar 26 10:55:12 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (rb_int2str): conversion function to String for
	  generic Integer.

	* numeric.c (rb_int_round): rounding function for generic
	  Integers.

	* numeric.c (rb_int_{uminus,plus,minus,mul,idiv,modulo}): basic