@@ -1,3 +1,8 @@
+Mon Mar 28 14:54:49 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* enc/unicode.c: Refactoring in preparation for data reduction for
+	  titlecase.
+
 Mon Mar 28 14:36:36 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* enc/unicode.c: Minor refactoring for I WITH DOT ABOVE.
